--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Meine Webseite</title>
 </head>
 <body>
-    <p>test</p>
+    <h1>Willkommen auf meiner Webseite</h1>
+    
+    <nav>
+        <ul>
+            <li><a href="ideen.html">Ideen für Kindergeburtstage</a></li>
+            <!-- Weitere Links zu anderen Seiten hier einfügen, falls gewünscht -->
+        </ul>
+    </nav>
+    
+    <!-- Hier kannst du zusätzlichen Inhalt für deine Startseite hinzufügen -->
 </body>
 </html>
