--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <nav>
         <ul>
-            <li><a href="ideen.html">Ideen für Kindergeburtstage</a></li>
+            <li><a href="IdeenKindergeburtstage.html">Ideen für Kindergeburtstage</a></li>
             <!-- Weitere Links zu anderen Seiten hier einfügen, falls gewünscht -->
         </ul>
     </nav>
