--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -11,11 +11,11 @@
     <h2>Spiele</h2>
     <h3>Stuhlpolonaise</h3>
     <p>Bei Stuhlpolonaise (auch Reise nach Jerusalem) tanzen die Kinder um Stühle herum, während die Musik spielt. Wenn die Musik stoppt, müssen sich die Kinder schnell auf einen Stuhl setzen. Derjenige, der keinen Stuhl bekommt, scheidet aus.</p>
-    <img src="bilder/Stuhlpolonaise.png" alt="Stuhlpolonaise" width="150">
+    <img src="Stuhlpolonaise.png" alt="Stuhlpolonaise" width="150">
     
     <h3>Tauziehen</h3>
     <p>Beim Tauziehen treten zwei Teams gegeneinander an und ziehen an entgegengesetzten Enden eines Seils. Das Team, das die gegnerische Mannschaft über eine markierte Linie zieht, gewinnt das Spiel.</p>
-    <img src="bilder/Tauziehen.png" alt="Tauziehen" width="150">
+    <img src="Tauziehen.png" alt="Tauziehen" width="150">
     
     <h3>Luftballontanz</h3>
     <p>Beim Luftballontanz tanzen die Kinder zu Musik, während sie versuchen, einen Luftballon zwischen ihren Körpern zu halten, ohne dass er den Boden berührt. Wenn ein Ballon platzt oder den Boden berührt, scheidet der entsprechende Teilnehmer aus.</p>
