--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -20,7 +20,7 @@
     
     <h3>Luftballontanz</h3>
     <p>Beim Luftballontanz tanzen die Kinder zu Musik, während sie versuchen, einen Luftballon zwischen ihren Körpern zu halten, ohne dass er den Boden berührt. Wenn ein Ballon platzt oder den Boden berührt, scheidet der entsprechende Teilnehmer aus.</p>
-    <img src="https://via.placeholder.com/150" alt="Luftballontanz" width="150">
+    <img src="Luftballons.jpg" alt="Luftballons" width="150">
 
     
     <h2>Schminken</h2>
