--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -13,6 +13,7 @@
     <p>Bei Stuhlpolonaise (auch Reise nach Jerusalem) tanzen die Kinder um Stühle herum, während die Musik spielt. Wenn die Musik stoppt, müssen sich die Kinder schnell auf einen Stuhl setzen. Es gibt einen (oder mehrere) Stuhl weniger als Anzahl der Personen. Derjenige, der keinen Stuhl bekommt, scheidet aus.</p>
     <img src="Stuhlpolonaise.png" alt="Stuhlpolonaise" width="150">
     <p>Alternativ, falls nicht genug Stühle vorhanden sind, kann man auch Hoolahoopreifen, Zeitungsseiten, oder mit Kreide aufgemalte Kreise als Referenzorte nehmen.<p>
+    <p><a href="https://www.amazon.de/Eberhard-Faber-526520-Stra%C3%9Fenmalkreide-Glitzer/dp/B07KMPRFC8/ref=pd_day0fbt_thbs_d_sccl_1/261-5442370-7704214?pd_rd_w=S9NwO&content-id=amzn1.sym.a448a60d-171e-41b3-a693-2dc17f9728e0&pf_rd_p=a448a60d-171e-41b3-a693-2dc17f9728e0&pf_rd_r=HAVW4362VXN9CXC12BSV&pd_rd_wg=6noMh&pd_rd_r=d4f14da3-09f7-4ae1-a1a6-b4475cf50a7c&pd_rd_i=B07KMPRFC8&psc=1" target="_blank">Eberhard Faber 526520 Straßenmalkreide Glitzer auf Amazon ansehen</a></p>
     
     <h3>Tauziehen</h3>
     <p>Beim Tauziehen treten zwei Teams gegeneinander an und ziehen an entgegengesetzten Enden eines Seils. Das Team, das die gegnerische Mannschaft über eine markierte Linie zieht, gewinnt das Spiel.</p>
