--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags für die Produktvorschau -->
     <meta property="og:title" content="Eberhard Faber Straßenmalkreide Glitzer">
     <meta property="og:description" content="Eberhard Faber Straßenmalkreide Glitzer für kreativen Straßenmalspaß.">
-    <meta property="og:image" content="https://m.media-amazon.com/images/G/03/apparel/rcxgs/tile._CB483369910_.gif"> <!-- URL zum Bild des Produkts -->
+    <meta property="og:image" content="https://m.media-amazon.com/images/I/71bzkxopc8L._AC_SL1500_.jpg"> <!-- URL zum Bild des Produkts -->
     <meta property="og:url" content="https://www.amazon.de/Eberhard-Faber-526520-Stra%C3%9Fenmalkreide-Glitzer/dp/B07KMPRFC8">
 
     <!-- Meta Tags für mobile Geräte -->
@@ -31,7 +31,7 @@
     <p><a href="https://www.amazon.de/Eberhard-Faber-526520-Stra%C3%9Fenmalkreide-Glitzer/dp/B07KMPRFC8/ref=pd_day0fbt_thbs_d_sccl_1/261-5442370-7704214?pd_rd_w=S9NwO&content-id=amzn1.sym.a448a60d-171e-41b3-a693-2dc17f9728e0&pf_rd_p=a448a60d-171e-41b3-a693-2dc17f9728e0&pf_rd_r=HAVW4362VXN9CXC12BSV&pd_rd_wg=6noMh&pd_rd_r=d4f14da3-09f7-4ae1-a1a6-b4475cf50a7c&pd_rd_i=B07KMPRFC8&psc=1" target="_blank">Eberhard Faber 526520 Straßenmalkreide Glitzer auf Amazon ansehen</a></p>
     <!-- Produktbild als Link -->
     <a href="https://www.amazon.de/Eberhard-Faber-526520-Stra%C3%9Fenmalkreide-Glitzer/dp/B07KMPRFC8" target="_blank">
-        <img src="https://m.media-amazon.com/images/G/03/apparel/rcxgs/tile._CB483369910_.gif" alt="Stuhlpolonaise" width="50">
+        <img src="https://m.media-amazon.com/images/I/71bzkxopc8L._AC_SL1500_.jpg" alt="Stuhlpolonaise" width="80">
     </a>
     
     <h3>Tauziehen</h3>
