--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -76,11 +76,11 @@
     <ul class="spiele-liste">
         <li>
             <input type="checkbox" id="spiele-toggle">
-            <label for="spiele-toggle">Spiele</label>
+            <label for="spiele-toggle"><h2>Spiele</h2></label>
             <ul>
-                <li>Stuhlpolonaise (auch Reise nach Jerusalem)</li>
-                <li>Tauziehen</li>
-                <li>Luftballontanz</li>
+                <li><h3>Stuhlpolonaise (auch Reise nach Jerusalem)</h3></li>
+                <li><h3>Tauziehen</h3></li>
+                <li><h3>Luftballontanz</h3></li>
             </ul>
         </li>
     </ul>
