--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -42,7 +42,7 @@
         }
 
         .spiele-liste {
-            list-style-type: none; /* Entfernt die standardmäßige Aufzählung */
+            list-style-type: square; /* Entfernt die standardmäßige Aufzählung */
             padding-left: 20px; /* Einrückung der Liste */
         }
 
@@ -82,7 +82,7 @@
     <ul class="spiele-liste">
         <li>
             <input type="checkbox" id="spiele-toggle">
-            <label for="spiele-toggle">Spiele</label>
+            <label for="spiele-toggle"><h2>Spiele</h2></label>
             <ul>
                 <li>
                     <h3>Stuhlpolonaise (auch Reise nach Jerusalem)</h3>
