--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -83,9 +83,10 @@
         <li>
             <input type="checkbox" id="spiele-toggle">
             <label for="spiele-toggle"><h2>Spiele</h2></label>
-            <ul>
+            <ul class="spiele-liste">
                 <li>
-                    <h3>Stuhlpolonaise (auch Reise nach Jerusalem)</h3>
+                    <input type="checkbox" id="spiele-toggle">
+                    <label for="spiele-toggle"><h3>Stuhlpolonaise (auch Reise nach Jerusalem)</h3></label>                    
                     <ul>
                         <p>Bei der Stuhlpolonaise tanzen die Kinder um Stühle herum, während die Musik spielt. Wenn die Musik stoppt, müssen sich die Kinder schnell auf einen Stuhl setzen. Es gibt einen (oder mehrere) Stuhl weniger als Anzahl der Personen. Derjenige, der keinen Stuhl bekommt, scheidet aus.</p>
                         <img src="Stuhlpolonaise.png" alt="Stuhlpolonaise" width="150">
