--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -74,8 +74,8 @@
             cursor: pointer; /* Zeigercursor für das Aufklappsymbol */
         }
 
-        .spiele-liste h2 {
-            margin-top: 10px; /* Platz zwischen "Spiele" und der Überschrift */
+        .spiele-liste h2, .spiele-liste h3 {
+            margin-top: 10px; /* Platz zwischen Überschriften und vorangehendem Inhalt */
             cursor: pointer; /* Zeigercursor für das Aufklappsymbol */
         }
     </style>
@@ -116,12 +116,12 @@
         </li>
     </ul>
 
-    <h2 id="spiele">Spiele</h2>
-    <p>Weitere Ideen für Spiele:</p>
+    <h2 id="weitere-spiele">Weitere Spiele</h2>
+    <p>Hier sind einige weitere Ideen für Spiele:</p>
     <ul>
         <li>
             <h3>Tauziehen</h3>
-            <p>Beim Tauziehen treten zwei Teams gegeneinander an und ziehen an entgegengesetzten Enden eines Seils. Das Team, das die gegnerische Mannschaft über eine markierte Linie zieht, gewinnt das Spiel.</p>
+            <p>Beim Tauziehen treten zwei Teams gegeneinander an und ziehen an entgegengesetzten Enden eines Seils. Das Team, das das andere Team über eine bestimmte Linie zieht, gewinnt.</p>
         </li>
         <li>
             <h3>Dosenwerfen</h3>
