--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -67,6 +67,7 @@
         .spiele-liste ul {
             display: none; /* Versteckt die untergeordnete Liste standardmäßig */
             margin-top: 0;
+            list-style-type: none; /* Entfernt Aufzählungszeichen */
         }
 
         .spiele-liste h3, .spiele-liste h2 {
@@ -121,7 +122,7 @@
         const toggles = document.querySelectorAll('.spiele-liste input[type="checkbox"]');
         toggles.forEach(toggle => {
             toggle.addEventListener('change', function() {
-                const ul = this.nextElementSibling.querySelector('ul');
+                const ul = this.parentNode.querySelector('ul');
                 ul.style.display = this.checked ? 'block' : 'none';
             });
         });
