--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -67,12 +67,15 @@
         .spiele-liste ul {
             display: none; /* Versteckt die untergeordnete Liste standardmäßig */
             margin-top: 0;
-            list-style-type: none; /* Entfernt Aufzählungszeichen */
         }
 
         .spiele-liste h3, .spiele-liste h2 {
             margin-top: 10px; /* Platz zwischen Überschriften und vorangehendem Inhalt */
             cursor: pointer; /* Zeigercursor für das Aufklappsymbol */
+        }
+
+        .spiele-liste h3 {
+            list-style-type: square; /* Aufzählungszeichen für h3 beibehalten */
         }
     </style>
 </head>
