--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -75,7 +75,7 @@
         }
 
         .spiele-liste h3 {
-            list-style-type: square; /* Aufzählungszeichen für h3 beibehalten */
+            list-style-type: none; /* Aufzählungszeichen für h3 entfernen */
         }
     </style>
 </head>
