--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -67,6 +67,7 @@
         .spiele-liste ul {
             display: none; /* Versteckt die untergeordnete Liste standardmäßig */
             margin-top: 0;
+			list-style-type: none; /* Entfernt Aufzählungszeichen */
         }
 
         .spiele-liste h3, .spiele-liste h2 {
