--- a/IdeenKindergeburtstage.html
+++ b/IdeenKindergeburtstage.html
@@ -116,10 +116,21 @@
                             </div>
                         </li>
                     </ul>
+					
+					<input type="checkbox" id="stuhlpolonaise-toggle">
+                    <label for="stuhlpolonaise-toggle"><h3>Tauziehen</h3></label>
+                    <ul>
+                        <li>
+							<p>Beim Tauziehen treten zwei Teams gegeneinander an und ziehen an entgegengesetzten Enden eines Seils. Das Team, das die gegnerische Mannschaft über eine markierte Linie zieht, gewinnt das Spiel.</p>
+							<img src="Tauziehen.jpg" alt="Tauziehen" width="150">
+                        </li>
+                    </ul>
+
                 </li>
             </ul>
         </li>
     </ul>
+
 
     <script>
         // JavaScript für das Aufklappen und Zuklappen der Abschnitte
